--- a/fireauth_templates/templates/allianceauth/icons.html
+++ b/fireauth_templates/templates/allianceauth/icons.html
@@ -1,14 +1,14 @@
 {% load static %}
 
 <link rel="apple-touch-icon" sizes="180x180" href="{% static 'fireauth_templates/favicons/apple-touch-icon.png' %}">
-<link rel="icon" type="image/png" sizes="32x32" href="{% static 'fireauth_templates/favicons/apple-touch-icon.png' %}">
-<link rel="icon" type="image/png" sizes="192x192" href="{% static 'fireauth_templates/favicons/apple-touch-icon.png' %}">
-<link rel="icon" type="image/png" sizes="16x16" href="{% static 'fireauth_templates/favicons/apple-touch-icon.png' %}">
-<link rel="manifest" href="{% static 'fireauth_templates/favicons/apple-touch-icon.png' %}">
-<link rel="mask-icon" href="{% static 'fireauth_templates/favicons/apple-touch-icon.png' %}" color="#5bbad5">
-<link rel="shortcut icon" href="{% static 'fireauth_templates/favicons/apple-touch-icon.png' %}">
+<link rel="icon" type="image/png" sizes="32x32" href="{% static 'fireauth_templates/favicons/favicon-32x32.png' %}">
+<link rel="icon" type="image/png" sizes="192x192" href="{% static 'fireauth_templates/favicons/android-chrome-192x192.png' %}">
+<link rel="icon" type="image/png" sizes="16x16" href="{% static 'fireauth_templates/favicons/favicon-16x16.png' %}">
+<link rel="manifest" href="{% static 'fireauth_templates/favicons/site.webmanifest' %}">
+<link rel="mask-icon" href="{% static 'fireauth_templates/favicons/safari-pinned-tab.svg' %}" color="#5bbad5">
+<link rel="shortcut icon" href="{% static 'fireauth_templates/favicons/favicon.ico' %}">
 
 <meta name="msapplication-TileColor" content="#da532c">
-<meta name="msapplication-TileImage" content="{% static 'fireauth_templates/favicons/apple-touch-icon.png' %}">
-<meta name="msapplication-config" content="{% static 'fireauth_templates/favicons/apple-touch-icon.png' %}">
+<meta name="msapplication-TileImage" content="{% static 'fireauth_templates/favicons/mstile-144x144.png' %}">
+<meta name="msapplication-config" content="{% static 'fireauth_templates/favicons/browserconfig.xml' %}">
 <meta name="theme-color" content="#ffffff">
