[ADDED] Fira Code font for code blocks

--- a/fireauth_templates/templates/allianceauth/base.html
+++ b/fireauth_templates/templates/allianceauth/base.html
@@ -18,6 +18,7 @@
         {% include 'bundles/auth-base-css.html' %}
 
         {% include 'fireauth/bundles/fireauth-css.html' %}
+        {% include 'fireauth/bundles/fira-code-css.html' %}
         {% include 'fireauth/bundles/community-app-fixes-css.html' %}
 
         {% block extra_css %}{% endblock extra_css %}
