[ADDED] Max image width

--- a/fireauth_templates/static/fireauth_templates/css/fireauth.css
+++ b/fireauth_templates/static/fireauth_templates/css/fireauth.css
@@ -5,6 +5,11 @@
         border-radius: 6px;
     }
 
+    img {
+        height: auto;
+        max-width: 100%;
+    }
+
     code {
         font-family: "Fira Code", monospace;
     }
