[FIX] And another one

--- a/fireauth_templates/templates/fittings/edit_doctrine.html
+++ b/fireauth_templates/templates/fittings/edit_doctrine.html
@@ -87,7 +87,7 @@
                                             <option value="{{ ship.ship_type|type_render_url:64 }}">{{ship.ship_type__type_name}}</option>
                                         {% endfor %}
                                     </select>
-                                    <span id="helpBlock" class="help-block"> {% translate "If you do not see the ship type that you would like to use for the icon, add a fit that uses that ship type and try again." %}</span>
+                                    <span id="helpBlock" class="help-block"> {% translate "If you do not see the ship type that you would like to use for the icon, add a fitting that uses that ship type and try again." %}</span>
                                 </div>
                             </div>
 
