--- a/fireauth_templates/templates/fittings/create_category.html
+++ b/fireauth_templates/templates/fittings/create_category.html
@@ -71,7 +71,7 @@
                             <div class="row">
                                 <div class="col-sm-6">
                                     <div class="form-group">
-                                        <label for="fitSelect">{% translate "Select Fits" %}</label>
+                                        <label for="fitSelect">{% translate "Select Fittings" %}</label>
 
                                         <select name="fitSelect" id="fitSelect" multiple>
                                             {% for fit in fits %}
@@ -108,21 +108,36 @@
     {% include "fireauth/bundles/slimselect-js.html" %}
 
     <script>
-        let color_picker = document.getElementById("color");
-        let color_picker_wrapper = document.getElementById("color-wrapper");
+        const color_picker = document.getElementById('color');
+        const color_picker_wrapper = document.getElementById('color-wrapper');
 
-        color_picker.onchange = function () {
+        color_picker.onchange = function() {
             color_picker_wrapper.style.backgroundColor = color_picker.value;
         }
-
         color_picker_wrapper.style.backgroundColor = color_picker.value;
 
         new SlimSelect({
             select: "#groupSelect",
-            hideSelectedOption: true
+            hideSelectedOption: true,
+            placeholder: '{% translate "Select Value" %}',
+            searchText: '{% translate "No Results" %}',
+            searchPlaceholder: '{% translate "Search" %}'
         });
 
-        new SlimSelect({select: "#fitSelect", hideSelectedOption: true});
-        new SlimSelect({select: "#docSelect", hideSelectedOption: true});
+        new SlimSelect({
+            select: "#fitSelect",
+            hideSelectedOption: true,
+            placeholder: '{% translate "Select Value" %}',
+            searchText: '{% translate "No Results" %}',
+            searchPlaceholder: '{% translate "Search" %}'
+        });
+
+        new SlimSelect({
+            select: "#docSelect",
+            hideSelectedOption: true,
+            placeholder: '{% translate "Select Value" %}',
+            searchText: '{% translate "No Results" %}',
+            searchPlaceholder: '{% translate "Search" %}'
+        });
     </script>
 {% endblock %}
