--- a/fireauth_templates/templates/fittings/view_all_categories.html
+++ b/fireauth_templates/templates/fittings/view_all_categories.html
@@ -31,7 +31,7 @@
 
         <div class="panel panel-default">
             <div class="panel-heading">
-                <div class="panel-title">{% translate "Fits" %}</div>
+                <div class="panel-title">{% translate "Fittings" %}</div>
             </div>
 
             <div class="panel-body">
@@ -40,43 +40,46 @@
                 {% else %}
                     <table class="table table-striped table-hover dataTable" id="fitTable">
                         <thead>
-                            <th>{% translate "Name" %}</th>
-                            <th>{% translate "Doctrines Assigned" %}</th>
-                            <th>{% translate "Fittings Assigned" %}</th>
-                            {% if perms.fittings.manage %}
-                                <th>{% translate "Groups Assigned" %}</th>
-                                <th> </th>
-                            {% endif %}
+                            <tr>
+                                <th>{% translate "Name" %}</th>
+                                <th>{% translate "Doctrines Assigned" %}</th>
+                                <th>{% translate "Fittings Assigned" %}</th>
+
+                                {% if perms.fittings.manage %}
+                                    <th>{% translate "Groups Assigned" %}</th>
+                                    <th> </th>
+                                {% endif %}
+                            </tr>
                         </thead>
 
                         <tbody>
-                            {% for cat in cats %}
-                                <tr>
-                                    <td> <span class="label" style="background-color: {{cat.color}};"><a href="{% url 'fittings:view_category' cat.pk %}" class="nostyle">{{cat.name}}</a></span> </td>
-                                    <td> {{ cat.doctrines_count }}</td>
-                                    <td> {{ cat.total_fits }} </td>
-                                    {% if perms.fittings.manage %}
-                                        <td> {{ cat.groups_count }}</td>
-                                        <td>
-                                            <a href="{% url 'fittings:view_category' cat.pk %}" type="button" class="btn btn-sm btn-primary" data-toggle="tooltip" data-placement="top" title="{% translate 'View Category' %}">
-                                                <span class="fa fas fa-eye"></span>
-                                            </a>
-                                            <a href="{% url 'fittings:edit_category' cat.pk %}" type="button" class="btn btn-sm btn-warning" data-toggle="tooltip" data-placement="top" title="{% translate 'Edit Category' %}">
-                                                <span class="fa fas fa-pencil-alt"></span>
-                                            </a>
-                                            <a href="{% url 'fittings:delete_category' cat.pk %}" type="button" class="btn btn-sm btn-danger" data-toggle="tooltip" data-placement="top" title="{% translate 'Delete Category' %}">
-                                                <span class="fa fas fa-times"></span>
-                                            </a>
-                                        </td>
-                                    {% endif %}
-                                </tr>
-                            {% endfor %}
+                        {% for cat in cats %}
+                            <tr>
+                                <td> <span class="label" style="background-color: {{cat.color}};"><a href="{% url 'fittings:view_category' cat.pk %}" class="nostyle">{{cat.name}}</a></span> </td>
+                                <td> {{ cat.doctrines_count }}</td>
+                                <td> {{ cat.total_fits }} </td>
+                                {% if perms.fittings.manage %}
+                                    <td> {{ cat.groups_count }}</td>
+                                    <td>
+                                        <a href="{% url 'fittings:view_category' cat.pk %}" type="button" class="btn btn-sm btn-primary" data-toggle="tooltip" data-placement="top" title="{% translate 'View Category' %}">
+                                            <span class="fa fas fa-eye"></span>
+                                        </a>
+                                        <a href="{% url 'fittings:edit_category' cat.pk %}" type="button" class="btn btn-sm btn-warning" data-toggle="tooltip" data-placement="top" title="{% translate 'Edit Category' %}">
+                                            <span class="fa fas fa-pencil-alt"></span>
+                                        </a>
+                                        <a href="{% url 'fittings:delete_category' cat.pk %}" type="button" class="btn btn-sm btn-danger" data-toggle="tooltip" data-placement="top" title="{% translate 'Delete Category' %}">
+                                            <span class="fa fas fa-times"></span>
+                                        </a>
+                                    </td>
+                                {% endif %}
+                            </tr>
+                        {% endfor %}
                         </tbody>
                     </table>
 
                     <h6>
                         <i class="fas fa-exclamation-triangle"></i>
-                        <i>{% translate "*Note: Fit counts may be inaccurate as fits marked independently of doctrines may be counted more than once." %}</i>
+                        <i>{% translate "*Note: Fitting counts may be inaccurate as fittings marked independently of doctrines may be counted more than once." %}</i>
                     </h6>
                 {% endif %}
             </div>
@@ -90,14 +93,14 @@
     <script>
         $(document).ready(function() {
             {% if cats %}
-                $('#fitTable').DataTable();
+                $('#fitTable').DataTable({
+                    language: {
+                        url: '{{ STATIC_URL }}/fireauth_templates/libs/DataTables-Plugins/1.13.4/i18n/{{ LANGUAGE_CODE }}.json'
+                    },
+                });
             {% endif %}
 
             $('[data-toggle="tooltip"]').tooltip();
         });
     </script>
-{% endblock %}
-
-{% block extra_script %}
-
 {% endblock %}
