[CHANGE] Back to the original strings

--- a/fireauth_templates/templates/fittings/add_fit.html
+++ b/fireauth_templates/templates/fittings/add_fit.html
@@ -4,7 +4,7 @@
 {% load humanize %}
 {% load filters %}
 
-{% block page_title %}{% translate "Add Fitting" %}{% endblock %}
+{% block page_title %}{% translate "Add Fit" %}{% endblock %}
 
 {% block fittings_block %}
     {% if msg %}
