--- a/fireauth_templates/templates/fittings/edit_category.html
+++ b/fireauth_templates/templates/fittings/edit_category.html
@@ -72,7 +72,7 @@
                             <div class="row">
                                 <div class="col-sm-6">
                                     <div class="form-group">
-                                        <label for="fitSelect">{% translate "Select Fittings" %}</label>
+                                        <label for="fitSelect">{% translate "Select Fits" %}</label>
 
                                         <select name="fitSelect" id="fitSelect" multiple>
                                             {% for fit in fits %}
