--- a/fireauth_templates/templates/fittings/view_all_categories.html
+++ b/fireauth_templates/templates/fittings/view_all_categories.html
@@ -31,7 +31,7 @@
 
         <div class="panel panel-default">
             <div class="panel-heading">
-                <div class="panel-title">{% translate "Fittings" %}</div>
+                <div class="panel-title">{% translate "Fits" %}</div>
             </div>
 
             <div class="panel-body">
@@ -79,7 +79,7 @@
 
                     <h6>
                         <i class="fas fa-exclamation-triangle"></i>
-                        <i>{% translate "*Note: Fitting counts may be inaccurate as fittings marked independently of doctrines may be counted more than once." %}</i>
+                        <i>{% translate "*Note: Fit counts may be inaccurate as fits marked independently of doctrines may be counted more than once." %}</i>
                     </h6>
                 {% endif %}
             </div>
