--- a/fireauth_templates/templates/fittings/view_category.html
+++ b/fireauth_templates/templates/fittings/view_category.html
@@ -148,7 +148,7 @@
                                     <tr>
                                         <td colspan="4">
                                             <div class="alert alert-warning text-center">
-                                                {% translate "No Fittings Found" %}
+                                                {% translate "No Fits Found" %}
                                             </div>
                                         </td>
                                     </tr>
