--- a/fireauth_templates/templates/fittings/view_doctrine.html
+++ b/fireauth_templates/templates/fittings/view_doctrine.html
@@ -89,12 +89,12 @@
         <div class="col-md-9">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <div class="panel-title">{% translate "Doctrine Fittings" %}</div>
+                    <div class="panel-title">{% translate "Doctrine Fits" %}</div>
                 </div>
 
                 <div class="panel-body">
                     {% if not fits %}
-                        <div class="alert alert-warning text-center">{% translate "No Fittings Found" %}</div>
+                        <div class="alert alert-warning text-center">{% translate "No Fits Found" %}</div>
                     {% else %}
                         <table class="table table-hover dataTable" id="fitsTable">
                             <thead>
