--- a/fireauth_templates/templates/fittings/add_doctrine.html
+++ b/fireauth_templates/templates/fittings/add_doctrine.html
@@ -72,7 +72,7 @@
 
                             <div class="form-group">
                                 <label for="fitSelect" class="col-sm-2 control-label">
-                                    {% translate "Select Fit" %}
+                                    {% translate "Select Fits" %}
                                 </label>
 
                                 <div class="col-sm-10" style="margin-top: 5px; margin-bottom: 5px;">
